--- a/alire.toml
+++ b/alire.toml
@@ -7,3 +7,4 @@ authors = ["Fraser Wilson"]
 maintainers = ["Fraser Wilson <fraser@thewhitelion.eu>"]
 maintainers-logins = ["blancolioni"]
 tags = ["database"]
+website = "https://github.com/blancolioni/marlowe"
